--- a/eazystore/pom.xml
+++ b/eazystore/pom.xml
@@ -53,8 +53,8 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
