--- a/eazystore/src/main/resources/application.properties
+++ b/eazystore/src/main/resources/application.properties
@@ -1,34 +1,64 @@
-spring.application.name=eazystore
-#debug=true
+# ===========================
+# Spring Boot Application
+# ===========================
+spring.application.name=${SPRING_APPLICATION_NAME:eazystore}
+server.port=${SERVER_PORT:9090}
+server.address=0.0.0.0
 
-server.port=9090
-
+# Logging
 logging.pattern.console=%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n
-logging.level.root=${LOG_LEVEL:INFO}
-logging.file.name=${LOG_FILE_NAME:/Users/logesh/Desktop/logs/app.log}
-logging.pattern.file={"timestamp":"%d{yyyy-MM-dd HH:mm:ss}","level":"%p","logger":"%c","message":"%m"}
+logging.level.root=INFO
 
-spring.datasource.url=jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:eazystore}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:root}
-spring.jpa.show-sql=${JPA_SHOW_URL:true}
+# ===========================
+# PostgreSQL / Neon using env vars
+# ===========================
+spring.datasource.url=jdbc:postgresql://ep-wild-base-ad57t7mp-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_OX2ji9rKzwTL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.leak-detection-threshold=60000
+
+# Profiles
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
+
+# Actuator
 management.endpoint.health.show-details=always
 management.endpoints.web.base-path=/eazystore/actuator
 management.endpoints.web.exposure.include=*
-# management.endpoints.web.exposure.exclude=beans,health
 management.endpoint.configprops.show-values=always
 management.endpoint.env.show-values=always
-
 management.info.env.enabled=true
-info.app.name=${spring.application.name}
+
+# App info
+info.app.name=${SPRING_APPLICATION_NAME}
 info.app.description=Backend Project for Eazy Store E-commerce application
 info.app.version=1.0.0
-info.app.contact.email=4TtG3@example.com
+info.app.contact.email=dev@eazystore.com
 
+# Contact details
 contact.phone=+91-1234567890
 contact.email=dev@eazystore.com
 contact.address=123 Main Street, Anytown, USA
 
- # spring.profiles.active=prod
+# JWT Configuration
+jwt.secret=${JWT_SECRET:jxgEQeXHuPq8VdbyYFNkANdudQ53YUn4}
+
+# Spring Security (for development)
+spring.security.user.name=admin
+spring.security.user.password=admin123
+spring.security.user.roles=ADMIN
