fixed the cart bug and connected the deployed backend

--- a/eazystore/src/main/resources/application.properties
+++ b/eazystore/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Spring Boot Application
 # ===========================
 spring.application.name=${SPRING_APPLICATION_NAME:eazystore}
-server.port=${SERVER_PORT:9090}
+server.port=${PORT:9090}
 server.address=0.0.0.0
 
 # Logging
@@ -12,26 +12,28 @@ logging.level.root=INFO
 # ===========================
 # PostgreSQL / Neon using env vars
 # ===========================
-spring.datasource.url=jdbc:postgresql://ep-wild-base-ad57t7mp-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_OX2ji9rKzwTL
+spring.datasource.url=${NEON_DATABASE_URL}
+spring.datasource.username=${NEON_USERNAME}
+spring.datasource.password=${NEON_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA / Hibernate
-spring.jpa.show-sql=${JPA_SHOW_SQL:true}
-spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:true}
+# JPA / Hibernate - Optimized for production
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
+spring.jpa.properties.hibernate.format_sql=${HIBERNATE_FORMAT_SQL:false}
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=never
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.defer-datasource-initialization=true
 
-# Connection Pool Configuration
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=5
+# Connection Pool Configuration - Optimized for cloud deployment
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=3
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.initialization-fail-timeout=60000
 
 # Profiles
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
@@ -57,6 +59,9 @@ contact.address=123 Main Street, Anytown, USA
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET:jxgEQeXHuPq8VdbyYFNkANdudQ53YUn4}
+
+# Frontend Configuration
+frontend.url=${FRONTEND_URL:http://localhost:5173}
 
 # Spring Security (for development)
 spring.security.user.name=admin
