--- a/eazystore/.env
+++ b/eazystore/.env
@@ -4,7 +4,7 @@
 NEON_DATABASE_URL=jdbc:postgresql://ep-wild-base-ad57t7mp-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require
 NEON_USERNAME=neondb_owner
 NEON_PASSWORD=npg_OX2ji9rKzwTL
-
+FRONTEND_URL=http://localhost:3000 
 # ===========================
 # Spring Boot
 # ===========================
